[package]
name = "hello-world"
version = "0.1.0"
authors = ["Jacob Swindell <jacob.swindell@btinternet.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.15.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
critical-section = "1.1.2"
serde = { version = "1.0.190", default-features = false, features = ["derive"]}
#serde_cbor = { version = "0.11.2", default-features = false }
#ciborium = { version = "0.2.1", default-features = false }
postcard = "1.0.8"
heapless = "0.7.16"
#hex = {version = "0.4.3", default-features = false}
itertools = {version = "0.11.0", default-features = false}